--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
   "devDependencies": {
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
-    "@vitejs/plugin-react": "^4.2.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.39",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
-    "vite": "^5.0.0"
+    "vite": "^5.3.3"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^16.6.0",
     "react-beautiful-dnd": "^13.1.1"
   }
 }
